objects/Log__c.object
<CustomObject>
    <description>Object for logging events.</description>
    <fields>
        <fullName>Apigee_Session_Id__c</fullName>
        <description>Stores the session id of the current user sent in the header for Apigee transactions</description>
        <label>Apigee Session Id</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callout_Endpoint__c</fullName>
        <description>This field denotes the value of a triggered transaction&apos;s endpoint.</description>
        <label>Callout Endpoint</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>This field denotes the value of a class from where the transaction has been triggered.</description>
        <label>Class Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Code__c</fullName>
        <description>This field captures the value of the error code from the Integration in case of a failure.</description>
        <label>Error Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Http_Method__c</fullName>
        <description>This field stores the callout Http Method for the integration.</description>
        <label>Http Method</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Log level</description>
        <label>Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Name__c</fullName>
        <description>Log Name</description>
        <label>Log Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Order_Number__c</fullName>
        <description>Stores the Master Order Number of the transaction.</description>
        <label>Master Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>Log message</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>This field denotes the value of a class&apos;s Method from where the transaction has been triggered.</description>
        <label>Method Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>The request when making a callout.</description>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <description>The response while making a callout.</description>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <description>This field stores the session id of the user who made the transaction.</description>
        <label>Session Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <description>This field denotes unique transaction Id of the request made by the user.</description>
        <label>Transaction Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the executing user</description>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Log</label>
    <nameField>
        <displayFormat>LOG-{00000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>